<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040232"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_fechaUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaPuntos"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/btn_PuntosUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puntosPuntos"
            android:layout_marginLeft="60dp"/>

        <Switch
            android:id="@+id/switch_hintsUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_pistas"
            android:textColor="@color/white"
            android:layout_marginLeft="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:text="@string/tu_mejores_puntuaciones"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPuntuacionUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>