<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#040232"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuarioPuntos"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/id_user_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario:"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntosPuntos"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/id_points_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Puntos:"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"
                android:padding="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/partidas"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/id_partidas_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Partida:"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginRight="70dp"
                android:padding="10dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintsPuntos"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:layout_marginRight="70dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/id_hints_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hints:"
                android:textSize="25dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="5dp"
            android:background="@color/white">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>